core/src/components/item/item.scss
/* ... */
// Item: Color
// --------------------------------------------------

:host(.ion-color:not(.item-fill-solid):not(.item-fill-outline)) .item-native {
  background: current-color(base);
  color: current-color(contrast);
}

:host(.ion-color:not(.item-fill-solid):not(.item-fill-outline)) .item-native,
:host(.ion-color:not(.item-fill-solid):not(.item-fill-outline)) .item-inner {
  border-color: current-color(shade);
}


// Item: Activated
// --------------------------------------------------

:host(.ion-activated) .item-native {
  color: var(--color-activated);

  &::after {
    background: var(--background-activated);

    opacity: var(--background-activated-opacity);
  }
}

:host(.ion-color.ion-activated) .item-native {
  color: current-color(contrast);
}


// Item: Focused
// --------------------------------------------------

:host(.ion-focused) .item-native {
  color: var(--color-focused);

  &::after {
    background: var(--background-focused);

    opacity: var(--background-focused-opacity);
  }
}

:host(.ion-color.ion-focused) .item-native {
  color: current-color(contrast);

  &::after {
    background: current-color(contrast);
  }
}


// Item: Hover
// --------------------------------------------------

@media (any-hover: hover) {
  :host(.ion-activatable:not(.ion-focused):hover) .item-native {
    color: var(--color-hover);

    &::after {
      background: var(--background-hover);

      opacity: var(--background-hover-opacity);
    }
  }

  :host(.ion-color.ion-activatable:not(.ion-focused):hover) .item-native {
    color: #{current-color(contrast)};

    &::after {
      background: #{current-color(contrast)};
    }
  }
}


// Item: Disabled
// --------------------------------------------------

:host(.item-interactive-disabled:not(.item-multiple-inputs)) {
  cursor: default;
  pointer-events: none;
}

:host(.item-disabled) {
  cursor: default;
  opacity: .3;
  pointer-events: none;
}


// Native Item
// --------------------------------------------------

.item-native {
  @include border-radius(var(--border-radius));
  @include margin(0);
  @include padding(
    var(--padding-top),
    var(--padding-end),
    var(--padding-bottom),
    calc(var(--padding-start) + var(--ion-safe-area-left, 0px))
  );
  @include text-inherit();

  display: flex;
  position: relative;

  align-items: inherit;
  justify-content: inherit;

  width: 100%;
  min-height: var(--min-height);

  transition: var(--transition);

  border-width: var(--border-width);
  border-style: var(--border-style);
  border-color: var(--border-color);

  outline: none;

  background: var(--background);

  overflow: inherit;
  box-sizing: border-box;

  z-index: 1;
}

.item-native::-moz-focus-inner {
  border: 0;
}

.item-native::after {
  @include button-state();

  transition: var(--transition);

  z-index: -1;
}

button, a {
  cursor: pointer;
  user-select: none;

  -webkit-user-drag: none;
}


// Inner Item
// --------------------------------------------------

.item-inner {
  @include margin(0);
  @include padding(
    var(--inner-padding-top),
    calc(var(--ion-safe-area-right, 0px) + var(--inner-padding-end)),
    var(--inner-padding-bottom),
    var(--inner-padding-start)
  );

  display: flex;

  // This is required to work with an inset highlight
  position: relative;

  flex: 1;
  flex-direction: inherit;
  align-items: inherit;
  align-self: stretch;

  min-height: inherit;

  border-width: var(--inner-border-width);
  border-style: var(--border-style);
  border-color: var(--border-color);

  box-shadow: var(--inner-box-shadow);
  overflow: inherit;
  box-sizing: border-box;
}


// Item Bottom
// --------------------------------------------------

.item-bottom {
  @include margin(0);
  @include padding(
    0,
    var(--inner-padding-end),
    0,
    calc(var(--padding-start) + var(--ion-safe-area-left, 0px))
  );

  display: flex;

  justify-content: space-between;

}


// Item Detail Icon
// --------------------------------------------------

.item-detail-icon {
  color: var(--detail-icon-color);

  font-size: var(--detail-icon-font-size);

  opacity: var(--detail-icon-opacity);
}


// Item Slots
// --------------------------------------------------

::slotted(ion-icon) {
  font-size: 1.6em;
}

::slotted(ion-button) {
  --margin-top: 0;
  --margin-bottom: 0;
  --margin-start: 0;
  --margin-end: 0;

  z-index: 1;
}

::slotted(ion-label:not([slot="end"])) {
  flex: 1;
}

// Item Input
// --------------------------------------------------

:host(.item-input) {
  align-items: center;
}

.input-wrapper {
  display: flex;

  flex: 1;
  flex-direction: inherit;

  align-items: inherit;
  align-self: stretch;

  text-overflow: ellipsis;

  overflow: inherit;
  box-sizing: border-box;
}

:host(.item-label-stacked),
:host(.item-label-floating) {
  align-items: start;
}

:host(.item-label-stacked) .input-wrapper,
:host(.item-label-floating) .input-wrapper {
  flex: 1;
  flex-direction: column;
}


// Item Input Highlight
// --------------------------------------------------

.item-highlight,
.item-inner-highlight {
  @include position(0, 0, 0, 0);
  @include border-radius(inherit);
  position: absolute;

  width: 100%;

  height: 100%;

  transform: scaleX(0);

  transition: transform 200ms, border-bottom-width 200ms;

  z-index: 2;

  box-sizing: border-box;
  pointer-events: none;
}

// Item Input Focused
// --------------------------------------------------

:host(.item-interactive.ion-focused),
:host(.item-interactive.item-has-focus),
:host(.item-interactive.ion-touched.ion-invalid) {
  // If the item has a full border and highlight is enabled, show the full item highlight
  --full-highlight-height: #{calc(var(--highlight-height) * var(--show-full-highlight))};

  // If the item has an inset border and highlight is enabled, show the inset item highlight
  --inset-highlight-height: #{calc(var(--highlight-height) * var(--show-inset-highlight))};
}
/* ... */

